# fractally

./: .gitignore  COPYING  Makefile.am  README  README.md  configure.ac
data/: Makefile.am
data/desktop/: Makefile.am  fractally.desktop.in
doc/: Makefile.am  fractally.1.in
po/: POTFILES.in
src/: Makefile.am
src/tests/: Makefile.am  test_fractally.c
